# foreCast

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: anomaly.py  features.py  graph.py  insight.py  llm.py  main.py  models.py  pipeline.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CsvComponent.tsx  GraphComponent.tsx  HeroSection.tsx  ValuesComponet.tsx
frontend/src/components/ui/: background-ripple-effect.tsx
tests/: seasonal_test_data.csv  test_api.py  test_data.csv
